--- a/interactions/interactions.csproj
+++ b/interactions/interactions.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <PackageId>com.dducode.interactions</PackageId>
-        <Version>1.0.1</Version>
+        <Version>1.1.0</Version>
         <Authors>dducode</Authors>
         <Company>dducode</Company>
         <Product>interactions-package</Product>
@@ -15,6 +15,7 @@
         <RootNamespace>Interactions</RootNamespace>
         <TargetFrameworks>net9.0;netstandard2.1;net48</TargetFrameworks>
         <LangVersion>13.0</LangVersion>
+        <PackageReleaseNotes>added new handlers (retry, delay), transformers</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
