added branch test, patch handler factory methods

--- a/interactions/interactions.csproj
+++ b/interactions/interactions.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <PackageId>com.dducode.interactions</PackageId>
-        <Version>1.2.2</Version>
+        <Version>1.2.3</Version>
         <Authors>dducode</Authors>
         <Company>dducode</Company>
         <Product>interactions-package</Product>
@@ -15,7 +15,7 @@
         <RootNamespace>Interactions</RootNamespace>
         <TargetFrameworks>net9.0;netstandard2.1;net48</TargetFrameworks>
         <LangVersion>13.0</LangVersion>
-        <PackageReleaseNotes>patch pipelines</PackageReleaseNotes>
+        <PackageReleaseNotes>patch handler factory methods</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
