--- a/interactions/interactions.csproj
+++ b/interactions/interactions.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <PackageId>com.dducode.interactions</PackageId>
-        <Version>1.2.3</Version>
+        <Version>1.2.4</Version>
         <Authors>dducode</Authors>
         <Company>dducode</Company>
         <Product>interactions-package</Product>
@@ -15,7 +15,7 @@
         <RootNamespace>Interactions</RootNamespace>
         <TargetFrameworks>net9.0;netstandard2.1;net48</TargetFrameworks>
         <LangVersion>13.0</LangVersion>
-        <PackageReleaseNotes>patch handler factory methods</PackageReleaseNotes>
+        <PackageReleaseNotes>patch validators, added enum parser</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
@@ -23,10 +23,13 @@
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
             <_Parameter1>interactions-tests</_Parameter1>
         </AssemblyAttribute>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>dducode.Interactions.Unity</_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\interactions-core\interactions-core.csproj" />
+        <ProjectReference Include="..\interactions-core\interactions-core.csproj"/>
     </ItemGroup>
 
 </Project>
